# api/openapi/order.yml
@@ -9,18 +9,18 @@ servers:
       hostname:
         default: 127.0.0.1
 paths:
-  /customer/{customerID}/orders/{orderID}:
+  /customer/{customer_id}/orders/{order_id}:
     get:
       desciption: 'get order'
       parameters:
         - in: path
-          name: customerID
+          name: customer_id
           schema:
             type: string
           required: true
 
         - in: path
-          name: orderID
+          name: order_id
           schema:
             type: string
           required: true
@@ -31,7 +31,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Order'
+                $ref: '#/components/schemas/Response'
 
         default:
           description: todo
@@ -40,12 +40,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /customer/{customerID}/orders:
+  /customer/{customer_id}/orders:
     post:
       desciption: 'create order'
       parameters:
         - in: path
-          name: customerID
+          name: customer_id
           schema:
             type: string
           required: true
@@ -63,7 +63,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Order'
+                $ref: '#/components/schemas/Response'
 
         default:
           description: todo
@@ -78,14 +78,14 @@ components:
       type: object
       required:
         - id
-        - customerID
+        - customer_id
         - status
         - items
-        - paymentLink
+        - payment_link
       properties:
         id:
           type: string
-        customerID:
+        customer_id:
           type: string
         status:
           type: string
@@ -93,7 +93,7 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Item'
-        paymentLink:
+        payment_link:
           type: string
 
     Item:
@@ -102,7 +102,7 @@ components:
         - id
         - name
         - quantity
-        - priceID
+        - price_id
       properties:
         id:
           type: string
@@ -111,7 +111,7 @@ components:
         quantity:
           type: integer
           format: int32
-        priceID:
+        price_id:
           type: string
 
     Error:
@@ -123,10 +123,10 @@ components:
     CreateOrderRequest:
       type: object
       required:
-        - customerID
+        - customer_id
         - items
       properties:
-        customerID:
+        customer_id:
           type: string
         items:
           type: array
@@ -144,3 +144,21 @@ components:
         quantity:
           type: integer
           format: int32
+
+
+    Response:
+      type: object
+      properties:
+        errno:
+          type: integer
+        message:
+          type: string
+        data:
+          type: object
+        trace_id:
+          type: string
+      required:
+        - errno
+        - message
+        - data
+        - trace_id
